tests/bad/methods_invalid_struct.oc
/// fail: Couldn't find this identifier: Foo

def Foo::bar() {}